# topicviz

./: LICENSE  README.md  pyproject.toml  requirements.txt
notebooks/: topicviz_colab_demo.ipynb
topicviz/: __init__.py  core.py
