[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "topicviz"
version = "0.1.0"
description = "Testing repo: Bunka-like topic map visualization for Colab (LDA + UMAP + SentenceTransformer)."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "datasets>=2.19.0",
  "numpy>=1.24.0",
  "plotly>=5.20.0",
  "scikit-learn>=1.3.0",
  "sentence-transformers>=2.6.0",
  "umap-learn>=0.5.5",
]

[tool.setuptools]
packages = ["topicviz"]
